ace-gui-poc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ace-gui-poc
spec:
  selector:
      matchLabels:
        app: ace-gui-poc
  replicas: 2
  template:
      metadata:
        labels:
            app: ace-gui-poc
      spec:
        containers:
        - name: ace-gui-poc
          image: glacepoc.azurecr.io/ace-gui-poc:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 3000
              path: /
          livenessProbe:
            httpGet:
              port: 3000
              path: /
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
