ace-gui-poc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ace-gui-poc-lb
spec:
  type: LoadBalancer
  selector:
    app: ace-gui-poc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
