clock-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-clock-basic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/override-frontend-port: "8080"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: react-clock-basic-loadbalancer
          servicePort: 80
